yaml/monitoring/prometheus/prometheus-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: prometheus-ingress
  namespace: kube-system
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: prometheus.window.sdspaas.io
    http:
      paths:
      - path:
        backend:
          serviceName: prometheus
          servicePort: 9090
